checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000151390.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#39: 
> >> net/phonet/pep.c:262: error: lvalue required as left operand of assignment

WARNING:LONG_LINE: line length of 108 exceeds 100 columns
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))

The line has exceeded the specified maximum length.
To use a different maximum line length, the --max-line-length=n option
may be added while invoking checkpatch.

Earlier, the default line length was 80 columns.  Commit bdc48fa11e46
("checkpatch/coding-style: deprecate 80-column warning") increased the
limit to 100 columns.  This is not a hard limit either and it's
preferable to stay within 80 columns whenever possible.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#breaking-long-lines-and-strings

CHECK:SPACING: No space is necessary after a cast
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

CHECK:SPACING: spaces preferred around that '/' (ctx:VxV)
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))
                                                                  ^

CHECK:SPACING: spaces preferred around that '-' (ctx:VxV)
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))
                                                                                                      ^

ERROR:SPACING: space prohibited after that open square bracket '['
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))

ERROR:SPACING: space prohibited before that close square bracket ']'
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))

CHECK:UNNECESSARY_PARENTHESES: Unnecessary parentheses around __atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]
#67: FILE: arch/parisc/include/asm/atomic.h:28:
+#  define ATOMIC_HASH(a) (&(__atomic_hash[ (((unsigned long) (a))/L1_CACHE_BYTES) & (ATOMIC_HASH_SIZE-1) ]))

Parentheses are not required in the following cases:

  1. Function pointer uses::

      (foo->bar)();

    could be::

      foo->bar();

  2. Comparisons in if::

      if ((foo->bar) && (foo->baz))
      if ((foo == bar))

    could be::

      if (foo->bar && foo->baz)
      if (foo == bar)

  3. addressof/dereference single Lvalues::

      &(foo->bar)
      *(foo->bar)

    could be::

      &foo->bar
      *foo->bar

ERROR:SPACING: space required after that ',' (ctx:VxV)
#77: FILE: arch/parisc/include/asm/atomic.h:225:
+#define atomic_add(i,v)	((void)(__atomic_add_return( ((int)(i)),(v))))
                     ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#77: FILE: arch/parisc/include/asm/atomic.h:225:
+#define atomic_add(i,v)	((void)(__atomic_add_return( ((int)(i)),(v))))
                        	                                       ^

ERROR:SPACING: space prohibited after that open parenthesis '('
#77: FILE: arch/parisc/include/asm/atomic.h:225:
+#define atomic_add(i,v)	((void)(__atomic_add_return( ((int)(i)),(v))))

ERROR:SPACING: space required after that ',' (ctx:VxV)
#78: FILE: arch/parisc/include/asm/atomic.h:226:
+#define atomic_sub(i,v)	((void)(__atomic_add_return(-((int)(i)),(v))))
                     ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#78: FILE: arch/parisc/include/asm/atomic.h:226:
+#define atomic_sub(i,v)	((void)(__atomic_add_return(-((int)(i)),(v))))
                        	                                       ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#84: FILE: arch/parisc/include/asm/atomic.h:230:
+#define atomic_add_return(i,v)	(__atomic_add_return( ((int)(i)),(v)))
                            ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#84: FILE: arch/parisc/include/asm/atomic.h:230:
+#define atomic_add_return(i,v)	(__atomic_add_return( ((int)(i)),(v)))
                               	                                ^

ERROR:SPACING: space prohibited after that open parenthesis '('
#84: FILE: arch/parisc/include/asm/atomic.h:230:
+#define atomic_add_return(i,v)	(__atomic_add_return( ((int)(i)),(v)))

ERROR:SPACING: space required after that ',' (ctx:VxV)
#85: FILE: arch/parisc/include/asm/atomic.h:231:
+#define atomic_sub_return(i,v)	(__atomic_add_return(-((int)(i)),(v)))
                            ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#85: FILE: arch/parisc/include/asm/atomic.h:231:
+#define atomic_sub_return(i,v)	(__atomic_add_return(-((int)(i)),(v)))
                               	                                ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#95: FILE: arch/parisc/include/asm/atomic.h:292:
+#define atomic64_add(i,v)	((void)(__atomic64_add_return( ((s64)(i)),(v))))
                       ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#95: FILE: arch/parisc/include/asm/atomic.h:292:
+#define atomic64_add(i,v)	((void)(__atomic64_add_return( ((s64)(i)),(v))))
                          	                                         ^

ERROR:SPACING: space prohibited after that open parenthesis '('
#95: FILE: arch/parisc/include/asm/atomic.h:292:
+#define atomic64_add(i,v)	((void)(__atomic64_add_return( ((s64)(i)),(v))))

ERROR:SPACING: space required after that ',' (ctx:VxV)
#96: FILE: arch/parisc/include/asm/atomic.h:293:
+#define atomic64_sub(i,v)	((void)(__atomic64_add_return(-((s64)(i)),(v))))
                       ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#96: FILE: arch/parisc/include/asm/atomic.h:293:
+#define atomic64_sub(i,v)	((void)(__atomic64_add_return(-((s64)(i)),(v))))
                          	                                         ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#102: FILE: arch/parisc/include/asm/atomic.h:297:
+#define atomic64_add_return(i,v)	(__atomic64_add_return( ((s64)(i)),(v)))
                              ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#102: FILE: arch/parisc/include/asm/atomic.h:297:
+#define atomic64_add_return(i,v)	(__atomic64_add_return( ((s64)(i)),(v)))
                                 	                                  ^

ERROR:SPACING: space prohibited after that open parenthesis '('
#102: FILE: arch/parisc/include/asm/atomic.h:297:
+#define atomic64_add_return(i,v)	(__atomic64_add_return( ((s64)(i)),(v)))

ERROR:SPACING: space required after that ',' (ctx:VxV)
#103: FILE: arch/parisc/include/asm/atomic.h:298:
+#define atomic64_sub_return(i,v)	(__atomic64_add_return(-((s64)(i)),(v)))
                              ^

ERROR:SPACING: space required after that ',' (ctx:VxV)
#103: FILE: arch/parisc/include/asm/atomic.h:298:
+#define atomic64_sub_return(i,v)	(__atomic64_add_return(-((s64)(i)),(v)))
                                 	                                  ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000151390.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 22 errors, 2 warnings, 4 checks, 42 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000151390.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
